Homepage displays Wikipedia article of the day

--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* index.css or a similar global stylesheet */
+.line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;      /* Number of lines to show */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  
